<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/baseContainer">
	<LinearLayout
	    style="@style/contentContainer"
		android:orientation="vertical">
		
		<TextView
			android:id="@+id/TextView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:text="@string/finished_recording"/>
		
        <LinearLayout
            style="@style/user_pref_group">
            
            <TextView
                style="@style/user_prefs_label"
                android:text="@string/trip_purpose"/>
            <Spinner
                android:id="@+id/tripPurposeSpinner"
                style="@style/user_prefs_spinner"/>

        </LinearLayout>
        
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/TextPurpDescription"
			android:text="@string/select_trip_purpose"
			android:bufferType="spannable"
			android:textSize="14sp"
			android:lines="4"/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/enter_comments"
			android:textSize="16sp"/>
		
		<EditText
		    android:id="@+id/NotesField"
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:imeOptions="actionDone"/>
		
		<Button
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textStyle="bold"
			android:textSize="18sp"
			android:text="@string/enter_info"
			android:drawableLeft="@drawable/ic_dark_action_person"
			android:id="@+id/ButtonPrefs"/>
		
		<LinearLayout
			android:id="@+id/trip_buttons"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/discard"
				android:drawableLeft="@drawable/ic_dark_action_remove"
				android:id="@+id/ButtonDiscard"
				android:textStyle="bold"
				android:textSize="18sp"/>
			<Button
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/submit"
				android:drawableLeft="@drawable/ic_dark_action_save"
				android:id="@+id/ButtonSubmit"
				android:textStyle="bold"
				android:textSize="18sp"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>