<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/baseContainer">
    
    <LinearLayout
        style="@style/contentContainer"
        android:layout_above="@+id/RecordBar"
        android:orientation="vertical">
        
		<TextView
		    android:id="@+id/TextRecordStats"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/zero_points_collected"/>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:text="@string/distance"
				android:textSize="26sp"/>
			<TextView
				android:layout_height="wrap_content"
				android:id="@+id/TextDistance"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:text="@string/zero"
				android:layout_alignParentRight="true"
				android:textSize="26sp"/>
			
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_elapsed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:textSize="26sp"/>
			
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/TextDuration"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_time"
				android:textSize="26sp"/>
			
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/current_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:textSize="26sp"/>
			
			<TextView
				android:layout_height="wrap_content"
				android:id="@+id/TextSpeed"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/max_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			
			<TextView
			    android:id="@+id/TextMaxSpeed"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			
		</RelativeLayout>	
		
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/average_speed"
				android:layout_alignParentLeft="true"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
			
			<TextView
			    android:id="@+id/TextAvgSpeed"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:layout_alignParentRight="true"
				android:text="@string/zero_mph"
				android:layout_width="wrap_content"
				android:textSize="26sp"/>
		</RelativeLayout>
			
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/RecordBar"
        android:baselineAligned="true"
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		style="?android:attr/buttonBarStyle"
		android:background="@color/accent_color">
		<LinearLayout
	    	android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">
			<Button
			    android:id="@+id/ButtonRecordPause"
			    style="?android:attr/buttonBarButtonStyle"
			    android:drawableLeft="@drawable/pause"
				android:layout_width="wrap_content"
				android:minWidth="150dp"
				android:layout_height="wrap_content"
				android:text="@string/pause"
				android:textColor="@android:color/white"
				android:drawablePadding="@dimen/standard_padding"
				android:padding="@dimen/standard_padding"/>
		</LinearLayout>
		<LinearLayout
	    	android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">
			<Button
			    android:id="@+id/ButtonFinished"
			    style="?android:attr/buttonBarButtonStyle"
			    android:drawableLeft="@drawable/stop"
				android:layout_width="wrap_content"
				android:minWidth="150dp"
				android:layout_height="wrap_content"
				android:text="@string/stop"
				android:textColor="@android:color/white"
				android:drawablePadding="@dimen/standard_padding"
				android:padding="@dimen/standard_padding"/>
		</LinearLayout>
	</LinearLayout>
	
</RelativeLayout>
